Fiixed a bunch of issues on mobile

--- a/Frontend/css/root.css
+++ b/Frontend/css/root.css
@@ -8,14 +8,15 @@
     color: var(--color-text);
     padding: 0;
     margin: 0;
+    overscroll-behavior: none;
+    overflow: none;
 }
 
 body {
     background-color: black;
     z-index: -9999;
-    overflow: hidden;
-    height: 100vh;
-    width: 100vw;
+    height: 100vh !important;
+    width: 100vw !important;
 }
 
 .debug {
